src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>company_name__c</fullName>
        <label>Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>SponsoredLinX</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Crank IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get More Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iiConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJB Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>product_max_usage__c</fullName>
        <label>Product Max Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product_package__c</fullName>
        <label>Product Package</label>
        <picklist>
            <picklistValues>
                <fullName>No Package</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimised Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Starter Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Business Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Article Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Article Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Brand Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Local &amp; National Campaign Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Local Campaign Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Local Campaign + Analytics Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO National Campaign Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO National Campaign + Analytics Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Design + SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimized + SEO + Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting Support and Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>product_period__c</fullName>
        <label>Product Period</label>
        <picklist>
            <controllingField>product_recurring__c</controllingField>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>product_recurring__c</fullName>
        <label>Product Recurring</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>company_name__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>product_package__c</columns>
        <columns>product_recurring__c</columns>
        <columns>product_period__c</columns>
        <columns>product_max_usage__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>GMT_Australia</fullName>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
        <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>contains</operation>
            <value>GMT</value>
        </filters>
        <label>GMT Australia</label>
    </listViews>
    <listViews>
        <fullName>SponsoredLinX</fullName>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
        <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>contains</operation>
            <value>SL</value>
        </filters>
        <label>SponsoredLinX</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>